Fix excessive Boolean instance creation 3 (in parser)